--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-chat-elements-typescript": "^11.0.0",
     "react-dom": "^17.0.2",
+    "react-jitsi": "^1.0.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
