--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "lib-jitsi-meet": "^1.0.6",
     "react": "^17.0.2",
     "react-chat-elements-typescript": "^11.0.0",
     "react-dom": "^17.0.2",
